--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.5.0",
+    "firebase": "^10.15.1",
     "framer-motion": "^12.9.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.503.0",
+    "nodemailer": "^7.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
-    "tailwindcss": "^4.1.4"
+    "react-transition-group": "^4.4.5",
+    "tailwindcss": "^4.1.4",
+    "uuid": "^11.1.0",
+    "vite-plugin-env-compatible": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
