--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "destination": "/api/payment-callback.js"
     },
     {
+      "source": "/payment/callback",
+      "destination": "/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
