--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.9.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.503.0",
+    "node-fetch": "^2.6.7",
     "nodemailer": "^7.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
